upated about me text

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,27 +16,28 @@ import { Button } from '@/components/ui/button'
   <section class="lg:grid lg:grid-cols-2 lg:gap-8 mb-20">
     <div class="mb-10">
       <p class="leading-7">
-        Lorem Ipsum has been the industry's standard dummy text ever since the
-        1500s, when an unknown printer took a galley of type and scrambled it to
-        make a type specimen book. It has survived not only five centuries, but
-        also the leap into electronic typesetting, remaining essentially
-        unchanged.
+        With six years of experience in front-end development, I specialize in
+        creating responsive websites that unite beautiful design with technical
+        precision. As a former software engineer at a Fortune 500 company, I
+        worked closely with UX teams to develop features that enhanced user
+        experience, igniting my passion for UX design and inspiring my
+        transition into the field.
       </p>
       <br />
       <p class="leading-7">
-        Lorem Ipsum has been the industry's standard dummy text ever since the
-        1500s, when an unknown printer took a galley of type and scrambled it to
-        make a type specimen book. It has survived not only five centuries, but
-        also the leap into electronic typesetting, remaining essentially
-        unchanged.
+        Empathy drives my approach to design. I believe in understanding user
+        needs to create solutions that make their lives easier while supporting
+        business goals. I love working in Figma, crafting intuitive,
+        high-fidelity interfaces that combine functionality with visual appeal.
+        My technical skills in HTML, CSS, and JavaScript let me prototype
+        efficiently and collaborate seamlessly with developers.
       </p>
       <br />
       <p class="leading-7">
-        Lorem Ipsum has been the industry's standard dummy text ever since the
-        1500s, when an unknown printer took a galley of type and scrambled it to
-        make a type specimen book. It has survived not only five centuries, but
-        also the leap into electronic typesetting, remaining essentially
-        unchanged.
+        Outside of design, I’m a music enthusiast and proud Berklee College of
+        Music graduate, playing guitar, piano, and drums. I DJ drum and bass on
+        my weekly radio show, cheer on Clemson football, and recharge by hitting
+        mountain biking trails after a day of design.
       </p>
     </div>
     <div class="w-full">
