start of chop suey hero

--- a/src/pages/case-studies/chop-suey.astro
+++ b/src/pages/case-studies/chop-suey.astro
@@ -1,35 +1,15 @@
 ---
 import Layout from '../../layouts/Layout.astro'
 import '../../styles/globals.css'
-import data from '../../data/casestudies/miamors.json'
-import Giffy from '@/components/shared/giffy.astro'
-import ContactButton from '@/components/shared/contact-button.astro'
-import {
-  Hero,
-  Summary,
-  Overview,
-  ProblemStatement,
-  Users,
-  Role,
-  Constraints,
-  Define,
-  DesignSystem,
-  Empathize,
-  HighFidelity,
-  Ideate,
-  Prototype,
-  Testing,
-  Sketches
-} from '@/components/case-studies/mi-amors'
+import { Hero } from '@/components/case-studies/chop-suey'
 ---
 
 <Layout title="Welcome to The Case Study for Mi Amor's">
   <section
     class="min-[616px]:max-w-[616px] mx-auto min-[744px]:max-w-[744px] min-[1028px]:max-w-[1028px]"
   >
-    <h1 class="text-7xl">Chop Suey Case Study</h1>
     <Hero />
-    <Summary />
+    <!-- <Summary />
     <div class="min-[1028px]:flex min-[1028px]:gap-8 min-[1028px]:items-start">
       <Overview
         title={data.overview.title}
@@ -85,5 +65,6 @@ import {
     />
     <Giffy />
   </section>
-  <ContactButton text="Let's Chat, I'm open for work!" />
+  <ContactButton text="Let's Chat, I'm open for work!" /> -->
+  </section>
 </Layout>
