fixed Image component imports

--- a/src/components/case-studies/chop-suey/hero.astro
+++ b/src/components/case-studies/chop-suey/hero.astro
@@ -21,6 +21,6 @@ import { Image } from 'astro:assets'
     alt="A GIF of the mi amors app prototype"
     class="mx-auto min-[744px]:mx-0 min-[744px]:mr-auto: rounded-[45px] border-[10px] border-custom-dark-grey"
     inferSize
-    loading="lazy"
+    loading="eager"
   /> -->
 </section>
