--- a/src/components/case-studies/mi-amors/users.astro
+++ b/src/components/case-studies/mi-amors/users.astro
@@ -1,6 +1,6 @@
 ---
 import CasestudyTextsection from '@/components/shared/casestudy-textsection.astro'
-import Image from 'astro/components/Image.astro'
+import { Image } from 'astro:assets'
 
 const { title, description, body, size } = Astro.props
 ---
