--- a/src/components/shared/giffy.astro
+++ b/src/components/shared/giffy.astro
@@ -1,5 +1,5 @@
 ---
-import Picture from 'astro/components/Picture.astro'
+import { Picture } from 'astro:assets'
 ---
 
 <div class="flex justify-center mt-20">
