added height and width to all images

--- a/src/components/case-studies/mi-amors/design-system.astro
+++ b/src/components/case-studies/mi-amors/design-system.astro
@@ -11,7 +11,8 @@ const { description, body, size } = Astro.props
     <Image
       src="https://utfs.io/f/itB1v1cNMItp9s3k35ETOxqIrSQkbojJU47gDfsmtLwM6V0n"
       alt="Image of UX Persona Techie Sam"
-      inferSize
+      height={1000}
+      width={1000}
       loading="lazy"
     />
   </div>
