--- a/src/components/case-studies/mi-amors/ideate.astro
+++ b/src/components/case-studies/mi-amors/ideate.astro
@@ -11,7 +11,8 @@ const { description, body, size } = Astro.props
     <Image
       src="https://utfs.io/f/itB1v1cNMItpGep20UfkOHresNcU7RVjupPSd6Ty9FxMztKQ"
       alt="Image of UX Persona Techie Sam"
-      inferSize
+      height={1000}
+      width={1000}
       loading="lazy"
     />
   </div>
