--- a/src/components/case-studies/mi-amors/prototype.astro
+++ b/src/components/case-studies/mi-amors/prototype.astro
@@ -11,7 +11,8 @@ const { description, body, size } = Astro.props
     <Image
       src="https://utfs.io/f/itB1v1cNMItpeiclEdKHr3wV8uPRDtSTLQKMfxsFUdnEjog4"
       alt="High fidelity wireframe images of mi amor's cafe app"
-      inferSize
+      height={1000}
+      width={1000}
       loading="lazy"
     />
   </div>
