--- a/src/components/case-studies/mi-amors/role.astro
+++ b/src/components/case-studies/mi-amors/role.astro
@@ -16,7 +16,8 @@ const { title, description, body, size } = Astro.props
     <Image
       src="https://utfs.io/f/itB1v1cNMItpvPaTlg4HXNxS5KysO7wo8UFpdT3efMn4m0Zq"
       alt="Image of the design thinking process steps"
-      inferSize
+      height={1000}
+      width={1000}
       loading="lazy"
     />
   </div>
