--- a/src/components/case-studies/mi-amors/sketches.astro
+++ b/src/components/case-studies/mi-amors/sketches.astro
@@ -11,7 +11,8 @@ const { description, body, size } = Astro.props
     <Image
       src="https://utfs.io/f/itB1v1cNMItpOI03MxY5xthbeuHyRm3PvVf4z6SOrspaLKFT"
       alt="hand drawn sketches of the mi amor's cafe app"
-      inferSize
+      height={1000}
+      width={1000}
       loading="lazy"
     />
   </div>
