--- a/src/components/case-studies/mi-amors/users.astro
+++ b/src/components/case-studies/mi-amors/users.astro
@@ -16,7 +16,8 @@ const { title, description, body, size } = Astro.props
     <Image
       src="https://utfs.io/f/itB1v1cNMItpejK6uwHr3wV8uPRDtSTLQKMfxsFUdnEjog4A"
       alt="Image of UX Persona Techie Sam"
-      inferSize
+      height={1000}
+      width={1000}
       loading="lazy"
     />
   </div>
