--- a/src/pages/case-studies/chop-suey.astro
+++ b/src/pages/case-studies/chop-suey.astro
@@ -1,4 +1,4 @@
-<!-- ---
+---
 import Layout from '../../layouts/Layout.astro'
 import '../../styles/globals.css'
 import { Hero } from '@/components/case-studies/chop-suey'
@@ -9,8 +9,8 @@ import { Hero } from '@/components/case-studies/chop-suey'
     class="min-[616px]:max-w-[616px] mx-auto min-[744px]:max-w-[744px] min-[1028px]:max-w-[1028px]"
   >
     <Hero />
-    Summary />
-    <div class="min-[1028px]:flex min-[1028px]:gap-8 min-[1028px]:items-start">
+    <!-- <Summary /> -->
+    <!-- <div class="min-[1028px]:flex min-[1028px]:gap-8 min-[1028px]:items-start">
       <Overview
         title={data.overview.title}
         description={data.overview.description}
@@ -63,7 +63,7 @@ import { Hero } from '@/components/case-studies/chop-suey'
       description={data.highFidelity.description}
       body={data.highFidelity.body}
     />
-    <Giffy />
+    <Giffy /> -->
   </section>
-  <ContactButton text="Let's Chat, I'm open for work!" />
-</Layout> -->
+  <!-- <ContactButton text="Let's Chat, I'm open for work!" /> -->
+</Layout>
