added chopsuey hero and summary section

--- a/src/components/case-studies/chop-suey/hero.astro
+++ b/src/components/case-studies/chop-suey/hero.astro
@@ -1,26 +1,28 @@
 ---
-// import { Image } from 'astro:assets'
+import { Image } from 'astro:assets'
 ---
 
 <section
   class="mt-20 min-[744px]:grid min-[744px]:grid-cols-2 gap-8 items-center justify-between w-full"
 >
-  <div class="mb-8">
+  <div class="mb-8 min-[744px]:mb-0">
     <h1 class="text-3xl font-black text-custom-dark-grey">
-      Mi Amor’s Café Designing a Seamless Mobile Ordering Experience
+      Crafting the Digital Soul of Chop Suey Books
     </h1>
     <p class="font-bold mt-2">
-      Creating a Faster, Simpler, and More Personalized Mobile ordering
-      experience
+      How thoughtful UX design transformed Chop Suey Books’ website into a
+      seamless, engaging shopping experience that reflects its unique identity
+      and values
     </p>
   </div>
 
   <!-- prototype gif -->
-  <!-- <Image
-    src="https://utfs.io/f/itB1v1cNMItpcEOWnjQBz5jVYTIJ6on9a2UQWSipNCebrqRu"
-    alt="A GIF of the mi amors app prototype"
-    class="mx-auto min-[744px]:mx-0 min-[744px]:mr-auto: rounded-[45px] border-[10px] border-custom-dark-grey"
-    inferSize
-    loading="eager"
-  /> -->
+  <Image
+    src="https://utfs.io/f/itB1v1cNMItpw7AVJ8sAGjcKQ9psT7PrRuF01B8WYEtwqIVi"
+    alt="Browser showing home page of Chop Suey books"
+    class=""
+    height={1000}
+    width={1000}
+    loading="lazy"
+  />
 </section>
