created coming soon page for chopsuey case study will working on it

--- a/src/pages/case-studies/chop-suey.astro
+++ b/src/pages/case-studies/chop-suey.astro
@@ -8,8 +8,9 @@ import { Hero, Summary } from '@/components/case-studies/chop-suey'
   <section
     class="min-[616px]:max-w-[616px] mx-auto min-[744px]:max-w-[744px] min-[1028px]:max-w-[1028px]"
   >
-    <Hero />
-    <Summary />
+    <h1 class="text-7xl mt-20">Coming Soon</h1>
+    <!-- <Hero />
+    <Summary /> -->
     <!-- <div class="min-[1028px]:flex min-[1028px]:gap-8 min-[1028px]:items-start">
       <Overview
         title={data.overview.title}
