about section complete

--- a/src/pages/case-studies/chop-suey.astro
+++ b/src/pages/case-studies/chop-suey.astro
@@ -1,16 +1,21 @@
 ---
 import Layout from '../../layouts/Layout.astro'
 import '../../styles/globals.css'
-import { Hero, Summary } from '@/components/case-studies/chop-suey'
+import data from '../../data/casestudies/chopsuey.json'
+import { Hero, Summary, About } from '@/components/case-studies/chop-suey'
 ---
 
 <Layout title="Welcome to The Case Study for Mi Amor's">
   <section
     class="min-[616px]:max-w-[616px] mx-auto min-[744px]:max-w-[744px] min-[1028px]:max-w-[1028px]"
   >
-    <h1 class="text-7xl mt-20">Coming Soon</h1>
-    <!-- <Hero />
-    <Summary /> -->
+    <Hero />
+    <Summary />
+    <About
+      title={data.about.title}
+      description={data.about.description}
+      body={data.about.body}
+    />
     <!-- <div class="min-[1028px]:flex min-[1028px]:gap-8 min-[1028px]:items-start">
       <Overview
         title={data.overview.title}
