--- a/src/components/case-studies/chop-suey/summary.astro
+++ b/src/components/case-studies/chop-suey/summary.astro
@@ -13,6 +13,6 @@
   <div class="flex flex-col gap-2">
     <p class="font-bold">Duration</p>
     <p>Oct 2024</p>
-    <p class="text-sm">(2 mo. total)</p>
+    <p class="text-sm">(1 wk. total)</p>
   </div>
 </section>
