added ideate section

--- a/src/pages/case-studies/chop-suey.astro
+++ b/src/pages/case-studies/chop-suey.astro
@@ -58,5 +58,6 @@ import {
       body={data.empathize.body}
     />
     <Define description={data.define.description} body={data.define.body} />
+    <Ideate description={data.ideate.description} body={data.ideate.body} />
   </section>
 </Layout>
