added high-fidelity section

--- a/src/components/case-studies/chop-suey/define.astro
+++ b/src/components/case-studies/chop-suey/define.astro
@@ -9,8 +9,8 @@ const { description, body, size } = Astro.props
 
   <div class="mt-8">
     <Image
-      src="https://utfs.io/f/itB1v1cNMItp1Wpx6ZmlzQiCAuy0xbXDatZjVBnGm7PvY9sN"
-      alt="Image of UX Persona carefule critic"
+      src="https://utfs.io/f/itB1v1cNMItpbqiPISGExWTYiJ1ehCprvOVwz8DoyK5BkjH3"
+      alt="Image of UX user flow"
       height={1000}
       width={1000}
       loading="lazy"
