--- a/src/components/case-studies/sbr/define.astro
+++ b/src/components/case-studies/sbr/define.astro
@@ -10,25 +10,21 @@ const { description, body, size } = Astro.props
   <!-- user story cards -->
   <div class="mt-8 grid gap-8 min-[1028px]:grid-cols-2">
     <div class="border-4 border-custom-dark p-4 rounded-[8px]">
-      <h3 class="font-bold">Busy Professional Brian</h3>
+      <h3 class="font-bold text-center">DJ's</h3>
       <p class="text-custom-dark-grey">
-        As a busy marketing manager, Brian wants to quickly place food orders
-        using an intuitive mobile app so that he can save time during his hectic
-        workdays. He needs real-time delivery tracking to manage his schedule
-        effectively and ensure that his food arrives on time. Brian also desires
-        a diverse menu that offers quick meal options that fit his ever-changing
-        tastes.
+        If we create a centralized platform for DJs to showcase their profiles,
+        stream live sets, and engage with fans, then Alex will be able to grow
+        his global fanbase, streamline his workflow, and focus more on creating
+        music rather than managing multiple tools.
       </p>
     </div>
     <div class="border-4 border-custom-dark p-4 rounded-[8px]">
-      <h3 class="font-bold">Family-Focused Fiona</h3>
+      <h3 class="font-bold text-center">Fans</h3>
       <p class="text-custom-dark-grey">
-        As a stay-at-home mom managing a busy household, Fiona wants an
-        easy-to-use mobile food ordering app that allows her to find
-        family-friendly restaurants and affordable meal options. She needs
-        simple customization options to cater to her family's diverse
-        preferences and reliable customer support in case of any issues with her
-        orders.
+        If we design a unified platform for discovering live streams, exploring
+        new DJs, and supporting artists directly, then Jamie will be able to
+        easily find niche drum & bass content, stay connected with his favorite
+        DJs, and feel more engaged with the community.
       </p>
     </div>
   </div>
