--- a/src/components/shared/overview.astro
+++ b/src/components/shared/overview.astro
@@ -4,7 +4,7 @@ const { title, body, name } = Astro.props
 import { SquareMenu, Navigation, Trophy } from 'lucide-astro'
 ---
 
-<section class="mt-40">
+<section class="mt-40 max-w-3xl mx-auto">
   <CaseStudyTextSection name={name} title={title} body={body} />
   <ul class="flex gap-4 flex-col mt-8">
     <li>
