--- a/src/components/shared/case-study-section.astro
+++ b/src/components/shared/case-study-section.astro
@@ -4,7 +4,13 @@ import CaseStudyTextSection from './case-study-text-section.astro'
 const { image, title, body } = Astro.props
 ---
 
-<section class="mt-40">
-  <Image src={image} alt={title} height={500} width={500} />
-  <CaseStudyTextSection title={title} body={body} < section />
+<section class="mt-40 lg:flex lg:justify-between lg:items-center lg:gap-8">
+  <Image
+    src={image}
+    alt={title}
+    height={900}
+    width={900}
+    class="mx-auto lg:max-w-md"
+  />
+  <CaseStudyTextSection title={title} body={body} />
 </section>
