--- a/src/pages/case-studies/chop-suey.astro
+++ b/src/pages/case-studies/chop-suey.astro
@@ -1,4 +1,4 @@
----
+<!-- ---
 import Layout from '../../layouts/Layout.astro'
 import '../../styles/globals.css'
 import data from '../../data/casestudies/chopsuey.json'
@@ -66,4 +66,4 @@ import {
     />
   </section>
   <ContactButton text="Let's Chat, I'm open for work!" />
-</Layout>
+</Layout> -->
