--- a/src/pages/case-studies/mi-amors.astro
+++ b/src/pages/case-studies/mi-amors.astro
@@ -3,7 +3,12 @@ import Layout from '../../layouts/Layout.astro'
 import '../../styles/globals.css'
 import data from '../../data/casestudies/miamors.json'
 import ContactButton from '@/components/shared/contact-button.astro'
-import { CaseStudyHero, Overview, CaseStudySection } from '@/components/shared/'
+import {
+  CaseStudyHero,
+  Overview,
+  CaseStudySection,
+  CaseStudyRole
+} from '@/components/shared/'
 ---
 
 <Layout title="Welcome to The Case Study for Mi Amor's">
@@ -15,27 +20,13 @@ import { CaseStudyHero, Overview, CaseStudySection } from '@/components/shared/'
       body={data.hero.body}
       image={data.hero.image}
     />
-
-    <!-- TODO: Make a component for this section -->
-    <section
-      class="mt-40 w-full flex flex-col gap-8 text-center py-16 min-[744px]:flex-row border-t-2 border-b-2 justify-between"
-    >
-      <div class="flex flex-col gap-2">
-        <p class="font-bold">Role</p>
-        <p>UX/UI Designer</p>
-      </div>
-      <div class="flex flex-col gap-2">
-        <p class="font-bold">Team</p>
-        <p>Chris Harley</p>
-        <p class="text-sm">(Solo)</p>
-      </div>
-      <div class="flex flex-col gap-2">
-        <p class="font-bold">Duration</p>
-        <p>Oct 2024</p>
-        <p class="text-sm">(2 wk. total)</p>
-      </div>
-    </section>
-
+    <CaseStudyRole
+      role={data.summary.role}
+      team={data.summary.team}
+      teamSubtitle={data.summary.teamSubtitle}
+      durationDate={data.summary.durationTime}
+      durationTime={data.summary.durationTime}
+    />
     <Overview
       name={data.overview.name}
       title={data.overview.title}
