--- a/src/pages/case-studies/mi-amors.astro
+++ b/src/pages/case-studies/mi-amors.astro
@@ -19,6 +19,8 @@ import {
       title={data.hero.title}
       body={data.hero.body}
       image={data.hero.image}
+      imageHeight={300}
+      imageWidth={300}
     />
     <CaseStudyRole
       role={data.summary.role}
