added lazy loading to case study section images

--- a/src/components/shared/case-study-section.astro
+++ b/src/components/shared/case-study-section.astro
@@ -11,6 +11,7 @@ const { image, title, body } = Astro.props
     height={900}
     width={900}
     class="mx-auto lg:max-w-md"
+    loading="lazy"
   />
   <CaseStudyTextSection title={title} body={body} />
 </section>
